# behaviorsense

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  detector.py  parser.py  profiler.py  pyproject.toml  requirements.txt  scorer.py
.github/workflows/: test.yml  tests.yml
sample_data/: activity.csv
tests/: test_cli.py  test_parser.py  test_scoring.py
