[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "behaviorsense"
version = "0.2.0"
description = "Behavioral anomaly detection for security logs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Omobolaji Adeyan" }
]
keywords = [
  "security",
  "anomaly-detection",
  "ueba",
  "threat-detection",
  "mitre-attack",
  "log-analysis"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Logging",
]
dependencies = []

[project.scripts]
behaviorsense = "detector:main"

[project.urls]
Homepage = "https://github.com/omobolajiadeyan/behaviorsense"
Repository = "https://github.com/omobolajiadeyan/behaviorsense"
Issues = "https://github.com/omobolajiadeyan/behaviorsense/issues"

[tool.setuptools]
py-modules = ["detector", "parser", "profiler", "scorer"]
